poprawka zaleznosci w pheaders
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@2259 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/Makefile.am
+++ b/Makefile.am
@@ -16,9 +16,9 @@ AUTOMAKE_OPTIONS = foreign
 # time to say automake goodbye?
  ifeq ($(enable_pheaders),yes)
 
-all: kadu/kadu-headers.h.gch
+all: kadu-headers
 
-kadu/kadu-headers.h.gch:
+kadu-headers:
 	@echo
 	@echo -e "\033[32m>>>\033[0m Precompiling headers ..."
 	@echo
