--- a/.config
+++ b/.config
@@ -77,5 +77,8 @@ module_amarok=n
 # Description from file module
 module_filedesc=n
 
-# mail checker module
+# Mail checker module
 module_mail=n
+
+# Spellchecker module (Aspell support)
+module_spellchecker=n
