make clean dla 3rdparty
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@2320 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/modules/Makefile.am
+++ b/modules/Makefile.am
@@ -134,3 +134,12 @@ uninstall-local:
 	rm -f $(DESTDIR)/$(datadir)/kadu/modules/*.so
 	rm -f $(DESTDIR)/$(datadir)/kadu/modules/translations/*.qm
 	rm -rf $(DESTDIR)/$(datadir)/kadu/modules/data/*
+
+clean-local:
+	@for dir in $(static_modules) $(shared_modules); do \
+		MODULE_3RDPARTY= && \
+		. ./$$dir/spec && \
+		for mod_3rdparty in $$MODULE_3RDPARTY; do \
+			$(MAKE) -C $$dir/$$mod_3rdparty clean; \
+		done; \
+	done
