--- a/modules/Makefile.in
+++ b/modules/Makefile.in
@@ -193,7 +193,7 @@ maintainer-clean-generic:
 	@echo "it deletes files that may require special tools to rebuild."
 clean: clean-am
 
-clean-am: clean-generic mostlyclean-am
+clean-am: clean-generic clean-local mostlyclean-am
 
 distclean: distclean-am
 
@@ -227,14 +227,14 @@ mostlyclean-am: mostlyclean-generic
 
 uninstall-am: uninstall-info-am uninstall-local
 
-.PHONY: all all-am check check-am clean clean-generic distclean \
-	distclean-generic distdir dvi dvi-am info info-am install \
-	install-am install-data install-data-am install-data-local \
-	install-exec install-exec-am install-info install-info-am \
-	install-man install-strip installcheck installcheck-am \
-	installdirs maintainer-clean maintainer-clean-generic \
-	mostlyclean mostlyclean-generic uninstall uninstall-am \
-	uninstall-info-am uninstall-local
+.PHONY: all all-am check check-am clean clean-generic clean-local \
+	distclean distclean-generic distdir dvi dvi-am info info-am \
+	install install-am install-data install-data-am \
+	install-data-local install-exec install-exec-am install-info \
+	install-info-am install-man install-strip installcheck \
+	installcheck-am installdirs maintainer-clean \
+	maintainer-clean-generic mostlyclean mostlyclean-generic \
+	uninstall uninstall-am uninstall-info-am uninstall-local
 
 
 all:
@@ -350,6 +350,15 @@ uninstall-local:
 	rm -f $(DESTDIR)/$(datadir)/kadu/modules/*.so
 	rm -f $(DESTDIR)/$(datadir)/kadu/modules/translations/*.qm
 	rm -rf $(DESTDIR)/$(datadir)/kadu/modules/data/*
+
+clean-local:
+	@for dir in $(static_modules) $(shared_modules); do \
+		MODULE_3RDPARTY= && \
+		. ./$$dir/spec && \
+		for mod_3rdparty in $$MODULE_3RDPARTY; do \
+			$(MAKE) -C $$dir/$$mod_3rdparty clean; \
+		done; \
+	done
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
 .NOEXPORT:
