autodownload - sprawdzanie błędów transferu
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@2362 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/configure.ac
+++ b/configure.ac
@@ -188,7 +188,9 @@ AC_DEFUN(PROCESS_MODULE_SPEC_FILES,[
 		if test -f modules/$mod.web; then \
 			if test -f modules/$mod/.autodownloaded -o ! -f modules/$mod/spec; then \
 				cd modules; \
-				./download_module $mod; \
+				if ! ./download_module $mod; then \
+					AC_MSG_ERROR([$mod download failed!]); \
+				fi; \
 				cd ..; \
 			fi; \
 		fi; \
