--- a/varia/themes/icons/default/icons.conf
+++ b/varia/themes/icons/default/icons.conf
@@ -68,6 +68,7 @@ AboutIcon=abouticon.png
 ManageModulesWindowIcon=share.png
 ImportExportWindowIcon=impexpicon.png
 ManageUsersWindowIcon=manusricon.png
+AddUserWindowIcon=manusricon.png
 ManageIgnoredWindowIcon=manageignored.png
 PersonalInformationWindowIcon=personalinfo.png
 ChangePasswordWindowIcon=password.png
