patch kida - okno wyboru sciezek
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@2391 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/varia/themes/icons/default/icons.conf
+++ b/varia/themes/icons/default/icons.conf
@@ -38,7 +38,6 @@ MergeUserlist=filesave.png
 SendUserlist=connect_creating.png
 DeleteUserlist=connect_creating.png
 ExportUserlist=connect_creating.png
-CloseWindow=stop.png
 PreviousPageHistory=back.png
 NextPageHistory=forward.png
 ShowHideInactiveUsers=offline.png
@@ -65,22 +64,32 @@ LoadingImage=loading.png
 Emoticon=emoticon.png
 AboutIcon=abouticon.png
 
-ManageModulesWindowIcon=share.png
-ImportExportWindowIcon=impexpicon.png
-ManageUsersWindowIcon=manusricon.png
-AddUserWindowIcon=manusricon.png
-ManageIgnoredWindowIcon=manageignored.png
-PersonalInformationWindowIcon=personalinfo.png
-ChangePasswordWindowIcon=password.png
-RegisterAccountButton=reload.png
-UnregisterAccountButton=reload.png
-RegisterWindowIcon=registeraccount.png
-UnregisterWindowIcon=unregisteraccount.png
+CloseWindow=stop.png
+OkWindowButton=reload.png
+ApplyWindowButton=reload.png
+CloseWindowButton=stop.png
+CancelWindowButton=stop.png
 AddUserButton=reload.png
 UpdateUserButton=reload.png
+RegisterAccountButton=reload.png
+UnregisterAcctounButton=reload.png
 ChangePasswordEmailButton=reload.png
 DeleteIgnoredButton=remove.png
 AddIgnoredButton=reload.png
 ReloadPersonalInfoButton=reload.png
 SavePersonalInfoButton=filesave.png
+ChooseSelectPathDialogButton=
+RemoveSelectPathDialogButton=
+ChangeSelectPathDialogButton=
+ApplySelectPathDialogButton=
 
+ManageModulesWindowIcon=share.png
+AddUserWindowIcon=manusricon.png
+ImportExportWindowIcon=impexpicon.png
+ManageUsersWindowIcon=manusricon.png
+ManageIgnoredWindowIcon=manageignored.png
+PersonalInformationWindowIcon=personalinfo.png
+ChangePasswordWindowIcon=password.png
+RegisterWindowIcon=registeraccount.png
+UnregisterWindowIcon=unregisteraccount.png
+SelectPathWindowIcon=selectpath.png
