patch bugiego - tylko kontakty z opisami
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@2409 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/varia/themes/icons/default/icons.conf
+++ b/varia/themes/icons/default/icons.conf
@@ -41,6 +41,7 @@ ExportUserlist=connect_creating.png
 PreviousPageHistory=back.png
 NextPageHistory=forward.png
 ShowHideInactiveUsers=offline.png
+ShowOnlyDescriptionUsers=online_d.png
 Configuration=configure.png
 EditUserInfo=identity.png
 AddUser=online.png
