wydzielenie modulu dcc
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@2432 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/.config
+++ b/.config
@@ -48,6 +48,9 @@ module_sms=y
 # default gateways for SMS module
 module_default_sms=y
 
+# dcc module with file transfer support
+module_dcc=y
+
 # Auto away module
 module_autoaway=y
 
