--- a/kadu/Makefile.in
+++ b/kadu/Makefile.in
@@ -105,7 +105,6 @@ about.cpp about.h about_moc.cpp \
 chat.cpp chat.h chat_moc.cpp \
 config_dialog.cpp config_dialog.h config_dialog_moc.cpp \
 config_file.cpp config_file.h \
-dcc.cpp dcc.h dcc_moc.cpp \
 debug.cpp debug.h \
 emoticons.cpp emoticons.h emoticons_moc.cpp \
 expimp.cpp expimp.h expimp_moc.cpp \
@@ -167,23 +166,22 @@ PROGRAMS = $(bin_PROGRAMS)
 
 am_kadu_OBJECTS = about.$(OBJEXT) about_moc.$(OBJEXT) chat.$(OBJEXT) \
 	chat_moc.$(OBJEXT) config_dialog.$(OBJEXT) \
-	config_dialog_moc.$(OBJEXT) config_file.$(OBJEXT) dcc.$(OBJEXT) \
-	dcc_moc.$(OBJEXT) debug.$(OBJEXT) emoticons.$(OBJEXT) \
-	emoticons_moc.$(OBJEXT) expimp.$(OBJEXT) expimp_moc.$(OBJEXT) \
-	gadu.$(OBJEXT) gadu_moc.$(OBJEXT) hints.$(OBJEXT) \
-	hints_moc.$(OBJEXT) history.$(OBJEXT) history_moc.$(OBJEXT) \
-	ignore.$(OBJEXT) ignore_moc.$(OBJEXT) kadu.$(OBJEXT) \
-	kadu_moc.$(OBJEXT) main.$(OBJEXT) message_box.$(OBJEXT) \
-	message_box_moc.$(OBJEXT) misc.$(OBJEXT) misc_moc.$(OBJEXT) \
-	modules.$(OBJEXT) modules_moc.$(OBJEXT) password.$(OBJEXT) \
-	password_moc.$(OBJEXT) pending_msgs.$(OBJEXT) \
-	pending_msgs_moc.$(OBJEXT) personal_info.$(OBJEXT) \
-	personal_info_moc.$(OBJEXT) register.$(OBJEXT) \
-	register_moc.$(OBJEXT) search.$(OBJEXT) search_moc.$(OBJEXT) \
-	status.$(OBJEXT) status_moc.$(OBJEXT) tabbar.$(OBJEXT) \
-	tabbar_moc.$(OBJEXT) userbox.$(OBJEXT) userbox_moc.$(OBJEXT) \
-	userinfo.$(OBJEXT) userinfo_moc.$(OBJEXT) userlist.$(OBJEXT) \
-	userlist_moc.$(OBJEXT) updates.$(OBJEXT)
+	config_dialog_moc.$(OBJEXT) config_file.$(OBJEXT) \
+	debug.$(OBJEXT) emoticons.$(OBJEXT) emoticons_moc.$(OBJEXT) \
+	expimp.$(OBJEXT) expimp_moc.$(OBJEXT) gadu.$(OBJEXT) \
+	gadu_moc.$(OBJEXT) hints.$(OBJEXT) hints_moc.$(OBJEXT) \
+	history.$(OBJEXT) history_moc.$(OBJEXT) ignore.$(OBJEXT) \
+	ignore_moc.$(OBJEXT) kadu.$(OBJEXT) kadu_moc.$(OBJEXT) \
+	main.$(OBJEXT) message_box.$(OBJEXT) message_box_moc.$(OBJEXT) \
+	misc.$(OBJEXT) misc_moc.$(OBJEXT) modules.$(OBJEXT) \
+	modules_moc.$(OBJEXT) password.$(OBJEXT) password_moc.$(OBJEXT) \
+	pending_msgs.$(OBJEXT) pending_msgs_moc.$(OBJEXT) \
+	personal_info.$(OBJEXT) personal_info_moc.$(OBJEXT) \
+	register.$(OBJEXT) register_moc.$(OBJEXT) search.$(OBJEXT) \
+	search_moc.$(OBJEXT) status.$(OBJEXT) status_moc.$(OBJEXT) \
+	tabbar.$(OBJEXT) tabbar_moc.$(OBJEXT) userbox.$(OBJEXT) \
+	userbox_moc.$(OBJEXT) userinfo.$(OBJEXT) userinfo_moc.$(OBJEXT) \
+	userlist.$(OBJEXT) userlist_moc.$(OBJEXT) updates.$(OBJEXT)
 kadu_OBJECTS = $(am_kadu_OBJECTS)
 kadu_DEPENDENCIES = $(foreach mod,$(basename \
 	$(static_modules)),../modules/$(mod)/$(mod).a)
@@ -199,8 +197,7 @@ am__depfiles_maybe = depfiles
 @AMDEP_TRUE@	./$(DEPDIR)/chat.Po ./$(DEPDIR)/chat_moc.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/config_dialog.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/config_dialog_moc.Po \
-@AMDEP_TRUE@	./$(DEPDIR)/config_file.Po ./$(DEPDIR)/dcc.Po \
-@AMDEP_TRUE@	./$(DEPDIR)/dcc_moc.Po ./$(DEPDIR)/debug.Po \
+@AMDEP_TRUE@	./$(DEPDIR)/config_file.Po ./$(DEPDIR)/debug.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/emoticons.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/emoticons_moc.Po ./$(DEPDIR)/expimp.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/expimp_moc.Po ./$(DEPDIR)/gadu.Po \
@@ -293,8 +290,6 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/config_dialog.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/config_dialog_moc.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/config_file.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/dcc.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/dcc_moc.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/debug.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/emoticons.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/emoticons_moc.Po@am__quote@
