--- a/kadu/Makefile.in
+++ b/kadu/Makefile.in
@@ -140,13 +140,12 @@ updates.cpp updates.h
 
 
 ###########################################################################
-INCLUDES = $(PHEADERS_INCLUDES) $(XFREE_INCLUDES) $(QT_INCLUDES) $(OPENSSL_INCLUDES) $(GSM_INCLUDES) $(GADU_INCLUDES)
+INCLUDES = $(PHEADERS_INCLUDES) $(XFREE_INCLUDES) $(QT_INCLUDES) $(OPENSSL_INCLUDES) $(GADU_INCLUDES)
 
 kadu_LDADD = \
-$(PTHREAD_LIBS) $(PNG_LIBS) \
-$(QT_LIBS) $(GSM_LIBS) $(GADU_LIBS) \
+$(PTHREAD_LIBS) $(PNG_LIBS) $(QT_LIBS) \
 $(foreach mod,$(basename $(static_modules)),../modules/$(mod)/$(mod).a) \
-$(static_modules_ldflags)
+$(static_modules_ldflags) $(GADU_LIBS)
 
 
 kadu_LDFLAGS = \
