sorka, przydkowy commit
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@2447 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/.config
+++ b/.config
@@ -31,7 +31,7 @@ module_sound=y
 module_ext_sound=y
 
 # Direct /dev/dsp sound support
-module_dsp_sound=n
+module_dsp_sound=m
 
 # Arts sound server support
 module_arts_sound=n
@@ -55,7 +55,7 @@ module_dcc=y
 module_autoaway=y
 
 # Autoresponder module
-module_autoresponder=n
+module_autoresponder=m
 
 # Echo sample module
 module_echo=n
@@ -72,7 +72,7 @@ module_echo=n
 module_tcl_scripting=n
 
 # Xmms player support
-module_xmms=m
+module_xmms=n
 
 # AmaroK player support
 module_amarok=n
@@ -84,7 +84,7 @@ module_filedesc=n
 module_mail=n
 
 # Spellchecker module (Aspell support)
-module_spellchecker=m
+module_spellchecker=n
 
 # PC-Speaker support
 module_pcspeaker=n
