wydzielenie do modułu rejestracji/wyrejestrowania konta, zmiany/przypominania hasła
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@2459 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/.config
+++ b/.config
@@ -54,6 +54,9 @@ module_dcc=y
 # Auto away module
 module_autoaway=y
 
+# Register/unregister account, remind/change password support
+module_account_management=y
+
 # Autoresponder module
 module_autoresponder=m
 
