powiadomienia do modułu
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@2496 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/.config
+++ b/.config
@@ -57,6 +57,15 @@ module_autoaway=y
 # Register/unregister account, remind/change password support
 module_account_management=y
 
+# General notification module (needed by sound, speech, hints, window_notify)
+module_notify=y
+
+# Notification by window module
+module_window_notify=y
+
+# Notification by hints module
+module_hints=y
+
 # Autoresponder module
 module_autoresponder=m
 
