--- a/varia/themes/sounds/default/sound.conf
+++ b/varia/themes/sounds/default/sound.conf
@@ -1,4 +1,8 @@
 [sounds]
 Message=msg.wav
 Chat=msg.wav
-Notify=msg.wav
+StatusAvailable=msg.wav
+StatusBusy=msg.wav
+StatusNotAvailable=msg.wav
+ConnectionError=msg.wav
+OtherMessage=msg.wav
