--- a/varia/themes/icons/default/icons.conf
+++ b/varia/themes/icons/default/icons.conf
@@ -94,3 +94,23 @@ ChangePasswordWindowIcon=password.png
 RegisterWindowIcon=registeraccount.png
 UnregisterWindowIcon=unregisteraccount.png
 SelectPathWindowIcon=selectpath.png
+
+ShortCutsTab=
+ChatTab=
+LookTab=
+NetworkTab=
+HistoryTab=history.png
+GeneralTab=
+
+AutoresponderTab=
+SMSTab=
+SoundsTab=
+SpeechTab=
+NotifyTab=
+HintsTab=
+
+XOSDTab=
+DesktopDockTab=
+XMMSTab=
+WeatherTab=
+MailTab=
