--- a/.config
+++ b/.config
@@ -1,5 +1,11 @@
 # 
-# KADU MODULES CONFIGURATION FILE
+# KADU CONFIGURATION FILE
+#
+
+
+#
+# Below are some internal modules, made by Kadu Team or got from others
+# but placed in sources because of important functionality
 #
 # y - yes, compiled into kadu (static)
 # m - module, compiles as .so (shared)
@@ -72,12 +78,17 @@ module_autoresponder=m
 # Echo sample module
 module_echo=n
 
+
 #
 # Below are some external modules, made by third parties, but
 # accepted by Kadu Team and quite well supported on our forum. When
 # you choose to install any of these, the sources will be downloaded
 # from their original web pages, so don't blame us when they are
 # (maybe just temporarily) unavailable.
+#
+# y - yes, compiled into kadu (static)
+# m - module, compiles as .so (shared)
+# n - no, module disabled
 #
 
 # TCL scripting support and KaduPro extensions
@@ -100,3 +111,25 @@ module_spellchecker=n
 
 # PC-Speaker support
 module_pcspeaker=n
+
+
+#
+# Below are some icon themes, one default and others, made by third
+# parties, but accepted by Kadu Team and quite well supported on our
+# forum. When you choose to install any of these, the sources will
+# be downloaded from their original web pages, so don't blame us when
+# they are (maybe just temporarily) unavailable.
+#
+# y - yes, install with kadu
+# n - no, icon theme disabled
+#
+
+# Default icon theme shipped with sources
+icons_default=y
+
+# Crystal 16x16 icons made by Arcisz
+icons_crystal16=n
+
+# Crystal 22x22 icons made by Arcisz
+icons_crystal22=n
+
