listy zależności modułów
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@2557 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/.config
+++ b/.config
@@ -15,43 +15,43 @@
 # Tray icon support
 module_docking=y
 
-# XLib tray docking techniques module
+# XLib tray docking techniques module (depends: docking)
 module_x11_docking=y
 
-# WindowMaker docking module
+# WindowMaker docking module (depends: docking)
 module_wmaker_docking=n
 
 # OpenSSL encrypted chat support
 module_encryption=y
 
-# Speech synthesis support
+# Speech synthesis support (depends: notify)
 module_speech=n
 
-# Voice chat support
+# Voice chat support (depends: dcc)
 module_voice=y
 
-# General sound support
+# General sound support (depends: notify)
 module_sound=y
 
-# External application sound support
+# External application sound support (depends: sound)
 module_ext_sound=y
 
-# Direct /dev/dsp sound support
+# Direct /dev/dsp sound support (depends: sound)
 module_dsp_sound=m
 
-# Arts sound server support
+# aRts sound server support (depends: sound)
 module_arts_sound=n
 
-# ESD sound server support
+# ESD sound server support (depends: sound)
 module_esd_sound=n
 
-# Network Audio System support
+# Network Audio System support (depends: sound)
 module_nas_sound=n
 
 # SMS module
 module_sms=y
 
-# default gateways for SMS module
+# default gateways for SMS module (depends: sms)
 module_default_sms=y
 
 # dcc module with file transfer support
@@ -63,13 +63,13 @@ module_autoaway=y
 # Register/unregister account, remind/change password support
 module_account_management=y
 
-# General notification module (needed by sound, speech, hints, window_notify)
+# General notification module
 module_notify=y
 
-# Notification by window module
+# Notification by window module (depends: notify)
 module_window_notify=y
 
-# Notification by hints module
+# Notification by hints module (depends: notify)
 module_hints=y
 
 # Autoresponder module
@@ -94,7 +94,7 @@ module_echo=n
 # TCL scripting support and KaduPro extensions
 module_tcl_scripting=n
 
-# Xmms player support
+# XMMS player support
 module_xmms=n
 
 # AmaroK player support
@@ -106,7 +106,7 @@ module_filedesc=n
 # Mail checker module
 module_mail=n
 
-# Spellchecker module (Aspell support)
+# Spellchecker module (aspell support)
 module_spellchecker=n
 
 # PC-Speaker support
