dodany moduł desktop_docking Dorregaraya
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@2562 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/.config
+++ b/.config
@@ -72,6 +72,9 @@ module_window_notify=y
 # Notification by hints module (depends: notify)
 module_hints=y
 
+# Always on top window docking module (depends: docking)
+module_desktop_docking=n
+
 # Autoresponder module
 module_autoresponder=m
 
