nowe ikony do okna konfiguracji
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@2569 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/varia/themes/icons/default/icons.conf
+++ b/varia/themes/icons/default/icons.conf
@@ -95,22 +95,22 @@ RegisterWindowIcon=registeraccount.png
 UnregisterWindowIcon=unregisteraccount.png
 SelectPathWindowIcon=selectpath.png
 
-ShortCutsTab=
-ChatTab=
-LookTab=
-NetworkTab=
-HistoryTab=history.png
-GeneralTab=
+ShortCutsTab=shortcuts.png
+ChatTab=chat.png
+LookTab=look.png
+NetworkTab=network.png
+HistoryTab=history_1.png
+GeneralTab=generals.png
 
-AutoresponderTab=
-SMSTab=
-SoundsTab=
-SpeechTab=
-NotifyTab=
-HintsTab=
+AutoresponderTab=autoresponder.png
+SMSTab=sms.png
+SoundsTab=sounds.png
+SpeechTab=speech.png
+NotifyTab=notify.png
+HintsTab=hints.png
 
 XOSDTab=
-DesktopDockTab=
-XMMSTab=
-WeatherTab=
-MailTab=
+DesktopDockTab=kadu.png
+XMMSTab=xmms.png
+WeatherTab=weather.png
+MailTab=mail.png
