Ikony by Arcisz
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@2572 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/varia/themes/icons/default/icons.conf
+++ b/varia/themes/icons/default/icons.conf
@@ -21,7 +21,7 @@ InvisibleWithDescriptionMobile=invisible_d_m.png
 
 AutoSendMessage=key_enter.png
 ScrollLock=scroll_lock.png
-ClearChat=eraser.png
+ClearChat=erasechat.png
 ChooseEmoticons=icons.png
 History=history.png
 LookupUserInfo=viewmag.png
@@ -31,23 +31,23 @@ SendMessage=forward.png
 CancelMessage=stop.png
 Message=message.png
 Blocking=blocking.png
-FetchUserList=connect_creating.png
-ImportFromFile=connect_creating.png
-SaveUserlist=filesave.png
-MergeUserlist=filesave.png
-SendUserlist=connect_creating.png
-DeleteUserlist=connect_creating.png
-ExportUserlist=connect_creating.png
+FetchUserList=importuserlist.png
+ImportFromFile=importfromfile.png
+SaveUserlist=saveuserlist.png
+MergeUserlist=mergeuserlist.png
+SendUserlist=exportuserlist.png
+DeleteUserlist=deluserlist.png
+ExportUserlist=exporttofile.png
 PreviousPageHistory=back.png
 NextPageHistory=forward.png
 ShowHideInactiveUsers=offline.png
 ShowOnlyDescriptionUsers=online_d.png
 Configuration=configure.png
 EditUserInfo=identity.png
-AddUser=online.png
+AddUser=adduser.png
 Exit=exit.png
 RegisterUser=newuser.png
-ManageModules=configure.png
+ManageModules=modmanager.png
 Mobile=mobile.png
 ResendUserlist=reload.png
 Mute=mute.png
@@ -55,8 +55,8 @@ Unmute=unmute.png
 SendSms=mobile.png
 SendFile=filesave.png
 SendPublicKey=encrypted.png
-RemoveFromUserlist=remove.png
-ClearHistory=eraser.png
+RemoveFromUserlist=deluser.png
+ClearHistory=erasehistory.png
 OpenFile=fileopen.png
 AddToNotifyList=forward.png
 RemoveFromNotifyList=back.png
@@ -64,7 +64,6 @@ Warning=msgbox_warning.png
 LoadingImage=loading.png
 Emoticon=emoticon.png
 AboutIcon=abouticon.png
-
 CloseWindow=stop.png
 OkWindowButton=reload.png
 ApplyWindowButton=reload.png
@@ -87,7 +86,7 @@ ApplySelectPathDialogButton=
 ManageModulesWindowIcon=share.png
 AddUserWindowIcon=manusricon.png
 ImportExportWindowIcon=impexpicon.png
-ManageUsersWindowIcon=manusricon.png
+ManageUsersWindowIcon=personalinfo.png
 ManageIgnoredWindowIcon=manageignored.png
 PersonalInformationWindowIcon=personalinfo.png
 ChangePasswordWindowIcon=password.png
@@ -101,16 +100,15 @@ LookTab=look.png
 NetworkTab=network.png
 HistoryTab=history_1.png
 GeneralTab=generals.png
-
 AutoresponderTab=autoresponder.png
 SMSTab=sms.png
 SoundsTab=sounds.png
 SpeechTab=speech.png
 NotifyTab=notify.png
 HintsTab=hints.png
+DesktopDockTab=kadu.png
 
 XOSDTab=
-DesktopDockTab=kadu.png
 XMMSTab=xmms.png
 WeatherTab=weather.png
 MailTab=mail.png
