--- a/.config
+++ b/.config
@@ -115,6 +115,8 @@ module_spellchecker=n
 # PC-Speaker support
 module_pcspeaker=n
 
+# Notification by XOSD (depends: notify)
+module_xosd_notify=n
 
 #
 # Below are some icon themes, one default and others, made by third
