zmiana zestawu ikon nie wymaga restartowania
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@2584 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/varia/themes/icons/default/icons.conf
+++ b/varia/themes/icons/default/icons.conf
@@ -19,18 +19,43 @@ InvisibleWithMobile=invisible_m.png
 InvisibleWithDescription=invisible_d.png
 InvisibleWithDescriptionMobile=invisible_d_m.png
 
+ManageIgnored=
+Configuration=configure.png
+ManageModules=modmanager.png
+PersonalInfo=
+LookupUserInfo=viewmag.png
+ImportExport=
+AddUser=adduser.png
+HelpMenuItem=
+AboutMenuItem=
+HideKadu=
+Exit=exit.png
+
+OpenChat=
+RemoveFromUserlist=deluser.png
+ClearHistory=erasehistory.png
+History=history.png
+EditUserInfo=identity.png
+VoiceChat=
+
 AutoSendMessage=key_enter.png
 ScrollLock=scroll_lock.png
 ClearChat=erasechat.png
-ChooseEmoticons=icons.png
-History=history.png
-LookupUserInfo=viewmag.png
+ChooseEmoticon=emoticon.png
+ChooseImage=icons.png
 EncryptedChat=encrypted.png
 DecryptedChat=decrypted.png
 SendMessage=forward.png
 CancelMessage=stop.png
+
+Mute=mute.png
+Unmute=unmute.png
+ShowHideInactiveUsers=offline.png
+ShowOnlyDescriptionUsers=online_d.png
+
 Message=message.png
 Blocking=blocking.png
+
 FetchUserList=importuserlist.png
 ImportFromFile=importfromfile.png
 SaveUserlist=saveuserlist.png
@@ -38,33 +63,24 @@ MergeUserlist=mergeuserlist.png
 SendUserlist=exportuserlist.png
 DeleteUserlist=deluserlist.png
 ExportUserlist=exporttofile.png
+ResendUserlist=reload.png
+
 PreviousPageHistory=back.png
 NextPageHistory=forward.png
-ShowHideInactiveUsers=offline.png
-ShowOnlyDescriptionUsers=online_d.png
-Configuration=configure.png
-EditUserInfo=identity.png
-AddUser=adduser.png
-Exit=exit.png
+
 RegisterUser=newuser.png
-ManageModules=modmanager.png
 Mobile=mobile.png
-ResendUserlist=reload.png
-Mute=mute.png
-Unmute=unmute.png
 SendSms=mobile.png
 SendFile=filesave.png
 SendPublicKey=encrypted.png
-RemoveFromUserlist=deluser.png
-ClearHistory=erasehistory.png
 OpenFile=fileopen.png
 AddToNotifyList=forward.png
 RemoveFromNotifyList=back.png
 Warning=msgbox_warning.png
 LoadingImage=loading.png
-Emoticon=emoticon.png
 AboutIcon=abouticon.png
 CloseWindow=stop.png
+
 OkWindowButton=reload.png
 ApplyWindowButton=reload.png
 CloseWindowButton=stop.png
