--- a/.config
+++ b/.config
@@ -118,6 +118,9 @@ module_pcspeaker=n
 # Notification by XOSD (depends: notify)
 module_xosd_notify=n
 
+# Weather checking
+module_weather=n
+
 #
 # Below are some icon themes, one default and others, made by third
 # parties, but accepted by Kadu Team and quite well supported on our
