domyslne moduly dynamiczne
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@2598 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/.config
+++ b/.config
@@ -16,7 +16,7 @@
 module_docking=y
 
 # XLib tray docking techniques module (depends: docking)
-module_x11_docking=y
+module_x11_docking=m
 
 # WindowMaker docking module (depends: docking)
 module_wmaker_docking=n
@@ -34,7 +34,7 @@ module_voice=y
 module_sound=y
 
 # External application sound support (depends: sound)
-module_ext_sound=y
+module_ext_sound=m
 
 # Direct /dev/dsp sound support (depends: sound)
 module_dsp_sound=m
@@ -58,7 +58,7 @@ module_default_sms=y
 module_dcc=y
 
 # Auto away module
-module_autoaway=y
+module_autoaway=m
 
 # Register/unregister account, remind/change password support
 module_account_management=y
