--- a/.config
+++ b/.config
@@ -22,13 +22,13 @@ module_x11_docking=m
 module_wmaker_docking=n
 
 # OpenSSL encrypted chat support
-module_encryption=y
+module_encryption=m
 
 # Speech synthesis support (depends: notify)
 module_speech=n
 
 # Voice chat support (depends: dcc)
-module_voice=y
+module_voice=m
 
 # General sound support (depends: notify)
 module_sound=y
@@ -49,28 +49,28 @@ module_esd_sound=n
 module_nas_sound=n
 
 # SMS module
-module_sms=y
+module_sms=m
 
 # default gateways for SMS module (depends: sms)
-module_default_sms=y
+module_default_sms=m
 
 # dcc module with file transfer support
-module_dcc=y
+module_dcc=m
 
 # Auto away module
 module_autoaway=m
 
 # Register/unregister account, remind/change password support
-module_account_management=y
+module_account_management=m
 
 # General notification module
 module_notify=y
 
 # Notification by window module (depends: notify)
-module_window_notify=y
+module_window_notify=m
 
 # Notification by hints module (depends: notify)
-module_hints=y
+module_hints=m
 
 # Always on top window docking module (depends: docking)
 module_desktop_docking=n
