Dodany config_wizard
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@2614 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/.config
+++ b/.config
@@ -80,7 +80,8 @@ module_autoresponder=m
 
 # Echo sample module
 module_echo=n
-
+# Configuration wizard module
+module_config_wizard=m
 
 #
 # Below are some external modules, made by third parties, but
