przywrócone sprawdzanie najnowszej wersji
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@2630 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/kadu/Makefile.am
+++ b/kadu/Makefile.am
@@ -25,7 +25,7 @@ tabbar.cpp tabbar.h tabbar_moc.cpp \
 userbox.cpp userbox.h userbox_moc.cpp \
 userinfo.cpp userinfo.h userinfo_moc.cpp \
 userlist.cpp userlist.h userlist_moc.cpp \
-updates.cpp updates.h
+updates.cpp updates.h updates_moc.cpp
 
 ###########################################################################
 # Precompiled headers support
