przekazywanie CC i CXX do plików 3rdparty modułów
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@2652 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/modules/Makefile.in
+++ b/modules/Makefile.in
@@ -255,7 +255,7 @@ all:
 		echo -e "\033[32m>>>\033[0m Compiling $$dir module [LD=$$MODULE_LDFLAGS,CXX=$$MODULE_CXXFLAGS] ..." && \
 		echo && \
 		for mod_3rdparty in $$MODULE_3RDPARTY; do \
-			$(MAKE) -C $$dir/$$mod_3rdparty; \
+			$(MAKE) -C $$dir/$$mod_3rdparty CC="$(CC)" CXX="$(CXX)"; \
 		done && \
 		moc_cpp_files="" && \
 		o_files="" && \
